--- a/.github/workflows/completion.yml
+++ b/.github/workflows/completion.yml
@@ -22,4 +22,4 @@ jobs:
         path: ./target/site/jacoco
         retention-days: 1      
     - name: Execute Driver
-      run: mvn compile exec:java -Dexec.mainClass="bmsstream.Sender"
+      run: bash ./.github/workflows/sender-exec.sh R 15 | bash ./.github/workflows/dummy-receiver-exec.sh
