--- a/.github/workflows/pipe_redirection.yml
+++ b/.github/workflows/pipe_redirection.yml
@@ -33,7 +33,5 @@ jobs:
       run: mvn compile exec:java -Dexec.mainClass="bmsstream.Sender" -Dexec.args="R 20"
     
     # Run the app
-    - name: Run the App
-      shell: cmd
-      timeout-minutes: 1
+    - name: Run the Pipe      
       run: mvn compile exec:java -Dexec.mainClass="bmsstream.Sender" -Dexec.args="R 20" | dotnet run --project Receiver\BatteryDataStreamingReceiver\BatteryDataStreamingReceiver.csproj
