--- a/.github/workflows/pipe_redirection.yml
+++ b/.github/workflows/pipe_redirection.yml
@@ -34,4 +34,4 @@ jobs:
     
     # Run the app
     - name: Run the Pipe      
-      run: mvn compile exec:java -Dexec.mainClass="bmsstream.Sender" -Dexec.args="R 20" | dotnet run --project Receiver\BatteryDataStreamingReceiver\BatteryDataStreamingReceiver.csproj
+      run: mvn compile exec:java -Dexec.mainClass="bmsstream.Sender" -Dexec.args="R 20" | dotnet run --project Receiver/BatteryDataStreamingReceiver/BatteryDataStreamingReceiver.csproj
