--- a/.github/workflows/pipe_redirection.yml
+++ b/.github/workflows/pipe_redirection.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         configuration: [Debug]
 
-    runs-on: windows-latest  # For a list of available runner types, refer to
+    runs-on: ubuntu-latest  # For a list of available runner types, refer to
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     steps:
@@ -34,6 +34,4 @@ jobs:
     
     # Run the app
     - name: Run the Pipe
-      shell: cmd
-      timeout-minutes: 1
-      run: call run_pipe.bat
+      run: mvn compile exec:java -Dexec.mainClass="bmsstream.Sender" -Dexec.args="R 20" | dotnet run --project Receiver/BatteryDataStreamingReceiver/BatteryDataStreamingReceiver.csproj
