--- a/.github/workflows/pipe_redirection.yml
+++ b/.github/workflows/pipe_redirection.yml
@@ -29,8 +29,8 @@ jobs:
       with:
         dotnet-version: 3.1.101
         
-    - name: Build Sender
-      run: javac src\main\java\bmsstream\Sender.java      
+    #- name: Build Sender
+    #  run: javac src\main\java\bmsstream\Sender.java      
     
     # Run the app
     - name: Run the Pipe
